# tcd-finalyear

./: .gitattributes  .gitignore  .gitmodules  README.md
computer-graphics/GraphicsFinalProject/: .gitignore  CMakeLists.txt  EBO.cpp  EBO.h  GraphicsFinalProject.sln  GraphicsFinalProject.vcxproj  GraphicsFinalProject.vcxproj.filters  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelJson.cpp_unused  ModelJson.h_unused  ShaderClass.cpp  VAO.h  VBO.cpp  VBO.h  anim_model.fs  anim_model.vs  animation.h  animator.h  animdata.h  assimpglmhelpers.h  backpack.fs  bone.h  camera.cpp  camera.h  cube.cpp  cube.h  default.frag  default.vert  floor.cpp  floor.fs  floor.vs  glad.c  loadTexture.cpp  loadTexture.h  main.cpp  mob.cpp  modelPhong.vs  (+12 more)
computer-graphics/GraphicsFinalProject/Libraries/include/glad/: glad.h
computer-graphics/GraphicsFinalProject/Libraries/lib/: assimp-vc143-mtd.exp  glfw3.lib
computer-graphics/GraphicsFinalProject/models/: untitled.mtl
computer-graphics/GraphicsFinalProject/models/custom/: custom.blend  custom.blend1  custom.glb  custom.mtl
computer-graphics/GraphicsFinalProject/models/low_poly_robot/: Battary.blend  Robot.blend  Robot.blend1  Robot.dae  Robot.mtl  robot.glb  robot.gltf
computer-graphics/GraphicsFinalProject/models/monkeyTest/: monkeyTest.blend  monkeyTest.blend1  monkeyTest.dae
computer-graphics/GraphicsFinalProject/models/spire/: Spire.mtl
computer-graphics/GraphicsFinalProject/models/survivor/: zombie_walk.dae
computer-graphics/GraphicsFinalProject/models/zombie/: zombie.mtl
computer-graphics/lab1/: .gitignore  CMakeLists.txt  (+2 more)
(+491 files in other folders)
